Fixed the spacing between elements in the category filter of the design picker

--- a/packages/design-picker/src/components/design-picker-category-filter/style.scss
+++ b/packages/design-picker/src/components/design-picker-category-filter/style.scss
@@ -5,6 +5,18 @@
 $design-picker-category-filter-text-color: #3c434a;
 $design-picker-category-filter-text-color-active: var(--studio-gray-100);
 
+.design-picker {
+	&.design-picker__unified {
+		.responsive-toolbar-group__dropdown {
+			&.design-picker__category-filter {
+				.responsive-toolbar-group__grouped-list {
+					justify-content: flex-start;
+				}
+			}
+		}
+	}
+}
+
 .design-picker-category-filter {
 	@include break-small {
 		flex: 0 245px;
